--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "interactive-data-visualization-dashboard",
   "version": "1.0.0",
-  "scripts": {
-    "test": "jest"
+   "homepage": "https://humairaaz.github.io/interactive-data-visualization-dashboard",
+   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "react": "^17.0.2",
@@ -13,10 +19,10 @@
   "devDependencies": {
     "@testing-library/react": "^11.2.7",
     "@testing-library/jest-dom": "^5.14.1",
-    "jest": "^26.6.3"
-  }
+    "jest": "^26.6.3",
+    "gh-pages": "^3.2.3"
+  },
   "jest": {
-  "testEnvironment": "jsdom"
-}
-
+    "testEnvironment": "jsdom"
+  }
 }
