--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,8 +32,8 @@ jobs:
 
     - name: Configure Git
       run: |
-        git config --global user.email "you@example.com"
-        git config --global user.name "Your Name"
+        git config --global user.email "humairaazmi100@gmail.com"
+        git config --global user.name "humairaaz"
 
     - name: Deploy to GitHub Pages
       if: success()
