--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "d3": "^6.7.0"
+    "d3": "^6.7.0",
+    "d3-zoom": "^2.0.0",
+    "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
     "@testing-library/react": "^11.2.7",
@@ -22,5 +24,4 @@
     "gh-pages": "^3.2.3",
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
-
 }
