--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
     "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/jest-dom": "^5.14.1",
-    "gh-pages": "^3.2.3",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
+    "gh-pages": "^3.2.3"
   }
 }
