--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7"
   }
 }
